syntax = "proto3";

package public.v1;

import "google/protobuf/timestamp.proto";
import "public/v1/tag.proto";

message Article {
  int32 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp published_at = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  repeated v1.Tag tags = 7;
  string thumbnail_url = 8;
}
